--- a/docs/rapport/intro.tex
+++ b/docs/rapport/intro.tex
@@ -1,5 +1,8 @@
 \chapter*{Introduction}
-\verb+// TODO bla bla bla+
+Le modèle relationnel permet de modéliser les informations contenues dans une base de données. Initialement implémenté dans les systèmes \emph{SQL/DS} et \emph{DB2} d'IBM, ce modèle a donné naissance au langage \emph{SQL} qui est aujourd'hui le plus utilisé. La conception d'une base de données relationnelle passe par la réalisation d'un \emph{schéma conceptuel} en respectant le modèle  \emph{Entité-Relation}\footnote{Également appelé \emph{Entité / Association}}. Cette phase d'analyse permet de représenter des concepts reliés sémantiquement entre eux. Dans le cadre du modèle \emph{Entité / Association} les tables, les attributs et certaines contraintes définissent des concepts, qui sont liés entre eux par des contraintes de clés étrangères. Le travail sur ce modèle de données graphique est effectuée en amont lors de la conception d'un système d'information et permet, dans une deuxième phase, la réalisation du schéma relationnel de la base de données à implémenter.
+
+Le travail présenté dans ce rapport consiste en la réalisation d'un utilitaire qui construit, à partir d'une base de données déjà implémentée et stockée dans un SGBDR\footnote{Système de Gestion de Base de Données Relationnelle.}, une représentation graphique qui se rapproche du modèle Entité-Relation. Cette représentation visuelle basée sur les métadonnées des SGBDR permet une compréhension rapide de l'organisation des données.
+
 \clearemptydoublepage
 \chapter*{Méthode de travail}
-\verb+// TODO bla bla bla+
+Ce travail a été réalisé par une équipe de trois étudiant en Master Informatique DECOL\footnote{Master DECOL : Données, Connaissances et Langage Naturel.} : Thibaut Marmin, Namrata Patel et Clément Sipieter.
