--- a/docs/rapport/cahier_des_charges.tex
+++ b/docs/rapport/cahier_des_charges.tex
@@ -1,11 +1,29 @@
 \textit{Petite intro :)}
 
 \section{Fonctionnalités}
-\subsection{Fonctions principale}
-\subsection{Fournir des renseignements}
-\subsection{Visualisation graphique}
-	
-\subsection{Fonctions contraintes}
-\subsubsection{Compatibilité SGBDs}
+	\subsection{Fonctions principales}
+		\subsubsection{Fournir des renseignements d'un schéma de BDD}
+			\paragraph{tables}
+				\begin{itemize}
+					\item NAME
+				\end{itemize}
+			\paragraph{attributs}
+				\begin{itemize}
+					\item NAME
+					\item TYPE
+				\end{itemize}
+			\paragraph{contraintes}
+				\begin{itemize}
+					\item PK
+					\item FK
+					\item UNIQUE
+			  	\item CHECK + CHECK_CLAUSE
+				\end{itemize} 
+		\subsubsection{Visualisation graphique}
 
-\section{Modélisation}
+\section{Fonctions contraintes}
+	\subsection{Généricité}
+	\subsection{Utilisation d'Hibernate}
+	\subsection{Extraction du schéma de BD à partir d'une connection direct} % à reformuler
+
+\section{Modélisation proposée}
