rédaction methode de travail

--- a/docs/rapport/intro.tex
+++ b/docs/rapport/intro.tex
@@ -5,4 +5,14 @@ Le travail présenté dans ce rapport consiste en la réalisation d'un utilitair
 
 \clearemptydoublepage
 \chapter*{Méthode de travail}
-Ce travail a été réalisé par une équipe de trois étudiant en Master Informatique DECOL\footnote{Master DECOL : Données, Connaissances et Langage Naturel.} : Thibaut Marmin, Namrata Patel et Clément Sipieter.
+Ce travail a été réalisé par une équipe de trois étudiants en Master Informatique DECOL\footnote{Master DECOL : Données, Connaissances et Langage Naturel.} : Thibaut Marmin, Namrata Patel et Clément Sipieter. Dans un premier temps, les travaux sur la phase d'analyse ont été effectués par l'ensemble des membres l'équipe. Lors de l'implémentation, nous avons commencé par définir ensemble l'architecture de l'application, puis nous avons réparti le tâches de la manière suivante : 
+
+\begin{description}
+\item[CLI\footnote{Commande Line Interface (\og Interface en Ligne de Commande \fg{} en Français).}] : Clément
+\item[Mapping] : Clément (\emph{Mysql}), Thibaut (\emph{Postgresql})
+\item[Intégration Hibernate] : Thibaut
+\item[Génération graphique] : Clément
+\item[Affichage de l'image générée] : Namrata
+\end{description}
+
+La rédaction du présent rapport et la réalisation des slides nécessaire à la soutenance ont été réalisés par l'équipe au complet.
