working on conception

--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -1,11 +1,17 @@
-\textit{Petite intro :)}
+\textit{Cette phase d'analyse est un élément indispensable à la bonne réalisation du projet. }
 
 \section{ORM}
 \subsection{Qu'est-ce qu'un ORM ?}
 \subsection{Pourquoi ?}
 
 \section{Le modèle}
-	\verb+// Diag de classe :)+
+\subsection{Modèle réellement rencontré}
+\begin{figure}[H]
+\centering
+\includegraphics[width=\textwidth]{files/diag_class_ameliore}
+\caption{Diagramme de classe réellement rencontré.}
+\label{figure:diag_classe_reel}
+\end{figure}
 	\subsection{Attributs}
 		Gestion des types génériques
 	\subsection{Tables}
