resolve errors latex

--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -27,9 +27,8 @@
 		\paragraph{grappa}
 				 entrée : fichier dot
 		\paragraph{graphviz}
-			GraphViz est un ensemble de logiciel libre développé par AT&T pour la visualisation de graphes. Il introduit le langage de description de graphe DOT.
+			GraphViz est un ensemble de logiciel libre développé par AT\&T pour la visualisation de graphes. Il introduit le langage de description de graphe DOT.
 				
-		\end{itemize}	
   \subsection{Notre choix}
 		\verb+//Notre choix c'est porté sur la commande DOT fournit par GraphViz+
 
