--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -1,17 +1,11 @@
-\textit{Cette phase d'analyse est un élément indispensable à la bonne réalisation du projet. }
+\textit{Petite intro :)}
 
 \section{ORM}
 \subsection{Qu'est-ce qu'un ORM ?}
 \subsection{Pourquoi ?}
 
 \section{Le modèle}
-\subsection{Modèle réellement rencontré}
-\begin{figure}[H]
-\centering
-\includegraphics[width=\textwidth]{files/diag_class_ameliore}
-\caption{Diagramme de classe réellement rencontré.}
-\label{figure:diag_classe_reel}
-\end{figure}
+	\verb+// Diag de classe :)+
 	\subsection{Attributs}
 		Gestion des types génériques
 	\subsection{Tables}
@@ -22,14 +16,14 @@
 \section{Générateur de graphes}
   \subsection{différentes librairies}
 		\paragraph{jung}
+				JUNG (the Java Universal Network/Graph Framework) est une API java. C'est un logiciel libre, sous licence BSD.
 				entrée : un fichier dot\\
 				inconvénients : dernières fonctionnalités dot non prise en charqe.
 		\paragraph{grappa}
 				 entrée : fichier dot
 		\paragraph{graphviz}
-			GraphViz est un ensemble de logiciel libre développé par AT&T pour la visualisation de graphes. Il introduit le langage de description de graphe DOT.
+			GraphViz est un ensemble de logiciel libre développé par AT\&T pour la visualisation de graphes. Il introduit le langage de description de graphe DOT.
 				
-		\end{itemize}	
   \subsection{Notre choix}
 		\verb+//Notre choix c'est porté sur la commande DOT fournit par GraphViz+
 
