premier travail implementation

--- a/docs/rapport/implementation.tex
+++ b/docs/rapport/implementation.tex
@@ -1,8 +1,11 @@
-\textit{Intro comme toujours}
+\textit{Cette partie présente \emph{Hibernate}, l'ORM que nous avons du utiliser pour gérer l'accès aux données. Elle détaille également les différents packages de l'application, la manière dont ont été mappé les informations, la manière adoptée pour la génération du graphe, ainsi que l'utilisation de l'outil développé en ligne de commande.}
 
 \section{L'ORM \emph{Hibernate}}
+Hibernate est un framework Java de type ORM. Bien que permettant de gérer la persistance des données, Hibernate sera utilisé ici uniquement dans le but d'accéder aux métadonnées des SGBD via des configurations de Mapping.
 \subsection{POJO}
+La définition des entités dans Hibernate à l'aide de classes POJO. Cet acronyme signifiant \og Plain Old Java Object \fg{} fait référence à de simples classes ayant comme principale caractéristique de n'implémenter aucune interface, et de posséder un \emph{getter} et un \emph{setter} par attribut.
 \subsection{Mapping}
+
 \subsection{Subselect}
 \subparagraph{\ldots}
 
