--- a/docs/rapport/implementation.tex
+++ b/docs/rapport/implementation.tex
@@ -7,11 +7,21 @@ La définition des entités dans \emph{Hibernate} à l'aide de classes \emph{POJ
 \subsection{Mapping}
 Le mapping consiste, comme son nom l'indique, à faire la liaison entre les entités définies (classes \emph{POJO}) et les tables en base de données. En règle générale, un objet $x$ est mappé avec une table relationnelle $table-x$, est les attributs $x_1$, $x_2$, \ldots, $x_n$ avec les attributs $tables-x.x_1$, $tables-x.x_1$, \ldots, $tables-x.x_1$. Il est également possible d'ajouter des relations entre attributs (One-to-One, One-to-Many, Many-to-Many), de déclarer des \emph{id}, etc.
 
-\emph{Hibernate} permet de définir le mapping via des annotations directement au sein des classes, ou via des fichiers de configuration \texttt{hbm}. C'est cette deuxième méthode que nous avons choisie.
+\emph{Hibernate} permet de définir le mapping via des annotations directement au sein des classes, ou via des fichiers de configuration xml \texttt{hbm}. C'est cette deuxième méthode que nous avons choisie, et qui sera décrite dans la partie~\ref{section:structure_de_lapplication}.
 \subsection{Subselect}
+
 \subparagraph{\ldots}
 
 \section{Structure de l'application}
+\label{section:structure_de_lapplication}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.5\textwidth]{files/archi}
+\caption{Structure des paquets de l'application.}
+\label{figure:structure_appli}
+\end{figure}
+
 \subsection{Package \emph{Model}}
 \subsubsection{Mappings}
 \subsubsection{Subselect}
