--- a/docs/rapport/implementation.tex
+++ b/docs/rapport/implementation.tex
@@ -1,4 +1,4 @@
-\textit{Cette partie présente \emph{Hibernate}, l'ORM que nous avons du utiliser pour gérer l'accès aux données. Elle détaille également les différents packages de l'application, la manière dont ont été mappé les informations, la manière adoptée pour la génération du graphe, ainsi que l'utilisation de l'outil développé en ligne de commande.}
+\textit{Cette partie présente \emph{Hibernate}, l'ORM que nous avons du utiliser pour gérer l'accès aux données. Elle détaille également les différents packages de l'application, la manière dont ont été mappé les informations, la manière adoptée pour la génération du graphe, ainsi que l'utilisation de l'outil développé en ligne de commande. Notons que l'utilisation du langage Java ne sera pas justifié étant donné qu'il s'agit d'une contrainte induite pas le fait que le framework \emph{Hibernate} devait être utilisé.}
 
 \section{L'ORM \emph{Hibernate}}
 Hibernate est un framework Java de type ORM. Bien qu'il permette la gestion de la persistance des données (écriture), Hibernate sera utilisé ici uniquement dans le but d'accéder aux métadonnées des SGBD (lecture) via des configurations de Mapping.
@@ -15,20 +15,37 @@ Le mapping consiste, comme son nom l'indique, à faire la liaison entre les enti
 \section{Structure de l'application}
 \label{section:structure_de_lapplication}
 
+Dans le but de faciliter la réutilisation du code et l'extension de sa compatibilité avec de nouveaux SGBD, nous avons pris soin de structurer l'application. La figure~\ref{figure:structure_appli} présente l'arborescence des paquets Java.
+
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.5\textwidth]{files/archi}
-\caption{Structure des paquets de l'application.}
+\caption{Arborescence des paquets Java de l'application.}
 \label{figure:structure_appli}
 \end{figure}
 
-\subsection{Package \emph{Model}}
-\subsubsection{Mappings}
-\subsubsection{Subselect}
-\subsection{Package \emph{toDot}}
-\subsubsection{Utilisation de \emph{graphviz}}
-dot, neato, etc.
-\subsubsection{Génération d'un image du graphe}
-\subsection{Package \emph{CLI}}
+Trois paquets principaux se distinguent :
+
+\begin{description}
+\item[\texttt{app}] : dans ce paquet sont regroupé toutes les classes Java nécessaires au fonctionnement interne de l'outil. On y trouve les sous paquets \texttt{cli}, \texttt{model} et \texttt{util} qui seront détaillés par la suite.
+\item[\texttt{conf}] : ce paquet permet d'externaliser les fichiers de configuration. Il a la particularité de ne stocker aucune classe Java.
+\item[\texttt{util}] : ici sont regroupés des classes java utilisés par l'application mais qui ne sont pas propre à l’exécution de ses fonctions initiales. Elle stocke notament des classes permettant la gestion du CLI.
+\end{description}
+
+\subsection{Paquet \texttt{app.cli}}
 \subsubsection{Utilisation}
-\subsection{Fichiers de configuration}
+
+\subsection{Paquet \texttt{app.model}}
+
+\subsection{Paquet \texttt{app.util}}
+\subsubsection{Génération de graphe}
+
+\subsection{Paquet \texttt{conf.hibernate}}
+\subsubsection{Fichiers de mapping}
+\subsubsection{Subselect}
+
+\subsection{Paquet \texttt{conf.types}}
+
+
+\section{Utilisation de \emph{graphviz}}
+dot, neato, etc.
