--- a/docs/rapport/conception.tex
+++ b/docs/rapport/conception.tex
@@ -27,7 +27,6 @@ Les contraintes de type \emph{NULL}, \emph{NOT NULL} et \emph{DEFAULT} sont igno
 		Une table est identifiée par son nom et le schéma auquel elle appartient. Elle possède un ensemble de colonnes et un ensemble de contraintes.
 	\subsection{Colonne}
 		Une colonne est identifiée par son nom et la table à laquelle elle appartient. Elle possède un type, et éventuellement une précision. 
-		\paragraph{Gestion des types génériques}
 	\subsection{Contraintes}
 		Une contrainte est identifié par un nom, sur certain SGBD il faut lui adjoindre le nom de la table sur laquelle elle est appliquée pour avoir une identification unique (notamment MySQL). Une contrainte possède un type et s'applique sur une ou plusieurs colonne d'une table. Elle peut être de type \og primary key \fg{}, \og foreign key \fg{}, \og unique \fg{} ou \og check \fg. Les contraintes de type \og foreign key \fg{} référence en plus une contrainte de type unique compatible, c'est à dire que les colonnes sur lesquelles s'applique la \og foreign key \fg{} et les colonnes sur lesquelles s'applique la contrainte référencée sont au même nombres et de même types. 
 \section{ORM}
@@ -42,7 +41,11 @@ En revanche, cette méthode d'abstraction présente l'inconvénient de générer
 
 \section{Compatibilité avec les SGBD}
 
-\section{Générateur de graphes}
+	\subsection{Gestion des types génériques}
+	\label{section:generic_types}
+
+
+\section{Visualisation de graphes}
   \subsection{différentes librairies}
 		\paragraph{JUNG} Java Universal Network/Graph Framework\\
 				JUNG est une API java permettant la modélisation, l'analyse et la visualisation de graphes. C'est un logiciel libre sous licence BSD\footnote{http://jung.sourceforge.net/license.txt} développé par l'université de Californie.
